# Hackathon

email-triage-env/: Dockerfile  README.md  baseline.py  env.py  inference.py  login.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
email-triage-env/server/: app.py
