[project]
name = "email-triage-env"
version = "0.1.0"
description = "Email triage OpenEnv environment"
authors = [
    { name = "Roopansh Saxena" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"